--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,21 @@
   "theme_color": "#2c3e50",
   "icons": [
     {
-      "src": "/icons.svg",
+      "src": "/icon-loc.svg",
       "type": "image/svg+xml",
       "sizes": "any"
+    },
+    {
+      "src": "/icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "orientation": "portrait",
